--- a/kube.yml
+++ b/kube.yml
@@ -4,10 +4,10 @@ metadata:
   name: train-schedule-app
 spec:
   type: NodePort
-  Selector:
-    app:train-schedule
+  selector:
+    app: train-schedule
    ports:
-   -protocol: TCP
+   - protocol: TCP
    port:8080
    nodeport: 8080
    
