--- a/kube.yml
+++ b/kube.yml
@@ -1,7 +1,7 @@
 kind: Service
 apiVersion: v1
 metadata:
-  name: train-schedule-app
+  name: train-schedule-service
 spec:
   type: NodePort
   selector:
