--- a/kube.yml
+++ b/kube.yml
@@ -1,15 +1,15 @@
 kind: Service
 apiVersion: v1
 metadata:
-  name: train-schedule-service5
+  name: train-schedule-service
 spec:
   type: NodePort
   selector:
     app: train-schedule
   ports:
   - protocol: TCP
-    port: 8086
-    nodePort: 8086
+    port: 8080
+    nodePort: 8080
    
 ---
 
@@ -33,5 +33,5 @@ spec:
         - name: train-schedule
           image: $ DOCKER_IMAGE_NAME:$BUILD_NUMBER
           ports:
-          - containerPort: 8086
+          - containerPort: 8080
     
